@@ -26,6 +26,7 @@
             Graphics.asImage: Allow 'string' output type, reference Graphics buffer if possible
             STM32: Fix 2v05 regression in hardware SPI.write (RX timeout)
             Graphics: fix lock leak in g.reset()/g.clear(1)
+            Graphics: added drawImages to allow layers of rotated/scaled images to be composited 
 
      2v05 : Add Array.includes
             Fix (Number.toFixed) rounding, eg (1234.505).toFixed(2)
